--- a/package.json
+++ b/package.json
@@ -3,12 +3,13 @@
   "version": "0.1.0",
   "description": "A library for live coding.",
   "main": "index.js",
+  "license": "MIT",
   "scripts": {
     "test": "make test"
   },
   "repository": {
     "type": "git",
-    "url": "git+ssh://git@bitbucket.org/lucidogen/lucy-live.git"
+    "url": "http://github.com/lucidogen/lucy-live.git"
   },
   "keywords": [
     "live coding",
@@ -16,14 +17,8 @@
     "live"
   ],
   "author": "Gaspard Bucher <gaspard@lucidogen.io> (http://lucidogen.io/)",
-  "licenses": [
-    {
-      "type": "commercial",
-      "url": "http://lucidity.io/license"
-    }
-  ],
   "bugs": {
-    "url": "https://bitbucket.com/lucidogen/lucy-live/issues"
+    "url": "https://github.com/lucidogen/lucy-live/issues"
   },
   "devDependencies": {
     "chai": "^2.3.0",
